--- a/playground/realworldapp/package.json
+++ b/playground/realworldapp/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "DEV=true vite dev",
+    "dev": "vite dev",
     "prod": "vite build",
     "start": "ts-node --esm server.ts"
   },
@@ -15,7 +15,6 @@
     "@types/node": "^20.4.2",
     "core": "workspace:*",
     "adapter-node": "workspace:*",
-    "adapter-vercel": "workspace:*",
     "sass": "^1.63.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
