--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
     "glob": "^10.3.3",
     "htmlparser2": "^9.0.0",
     "kleur": "^4.1.5",
+    "mdsvex": "^0.11.0",
     "mime": "^3.0.0",
     "set-cookie-parser": "^2.6.0",
     "sirv": "^2.0.3",
