--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@effect/data": "^0.15.1",
     "@effect/io": "^0.33.0",
+    "@effect/platform": "^0.13.10",
     "@effect/schema": "^0.27.0",
     "@vitejs/plugin-legacy": "^4.1.1",
     "cheerio": "1.0.0-rc.12",
