--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,7 +48,6 @@
     "hono": "^3.3.1",
     "htmlparser2": "^9.0.0",
     "kleur": "^4.1.5",
-    "launch-editor": "^2.6.0",
     "magic-string": "^0.30.3",
     "mdsvex": "^0.11.0",
     "mime": "^3.0.0",
@@ -56,6 +55,7 @@
     "sirv": "^2.0.3",
     "strip-ansi": "^7.1.0",
     "svelte": "^4.0.5",
+    "svelte-preprocess": "^5.0.4",
     "ts-dedent": "^2.2.0",
     "undici": "^5.22.1",
     "zod": "^3.21.4"
